# Chat-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  POSTGRES_SETUP.md  README.md  docker-compose.postgres.yml  docker-compose.yml  init-db.sql  log_config.yaml  new.md  postgres.Dockerfile  pyproject.toml  scenarions.txt  schema.sql
.devcontainer/: devcontainer.json
.github/workflows/: GCP-ci-cof-deploy.yml  GCP-ci-deploy.yaml  GCP-ci-fsor-deploy.yml  GCP-ci-fwbc-deploy.yml  GCP-ci-mvp-deploy.yml  GCP-deploy.yaml
app/: main.py
app/agents/: intent_prompt.py  prompts.py  spec.py  test_prompt.py
app/api/: api.py  conv.py  dependencies.py
app/core/: config.py  json_response.py  logtools.py
app/core/db/: __init__.py  models.py
app/models/: models.py  recipe.py  service_models.py
app/schemas/: mixlist.json  recipe.json
app/services/: chat_service.py  chatbot_content_search_service.py  conversation_service.py  device_info_service.py  device_service.py  embedding_service.py  embedding_service_mixlists.py  image_cache_service.py  ingredient_service.py  memory_service.py  persona_router.py  response_templates.py  vision_service.py  website_search_service.py
app/static/css/: cache.css  style.css
app/static/js/: script.js
app/templates/: admin.html  cache.html  chat.html  feedback.html
scripts/: cards.py  cleanup_embeddings.py  samples.json  scrap_chatbot_website.py  test_avif.py  vector_search.py
